# flaura

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.reuse/: dep5
LICENSES/: MIT.txt
flaura/: __init__.py  group.py  home.py  merge.py  pull.py  upstream.py
src/: main.rs
