[tool.poetry]
name = "flaura"
version = "0.1.0"
description = "Merge upstream with ease!"
authors = ["Fiana Fortressia <nefothingy@hotmail.com>"]
license = "APACHE OR MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
flaura = 'flaura:flaura'